; ModuleID = '/home/carl/AnghaBench/i3/src/extr_ipc.c_ipc_send_workspace_event.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_ipc.c_ipc_send_workspace_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@get_buf = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"workspace\00", align 1
@I3_IPC_EVENT_WORKSPACE = common dso_local global i32 0, align 4
@free = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ipc_send_workspace_event(i8* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = call i32 @ipc_marshal_workspace_event(i8* %10, i32* %11, i32* %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* @get_buf, align 4
  %15 = call i32 (i32, ...) @y(i32 %14, i8** %8, i32* %9)
  %16 = load i32, i32* @I3_IPC_EVENT_WORKSPACE, align 4
  %17 = load i8*, i8** %8, align 8
  %18 = call i32 @ipc_send_event(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 %16, i8* %17)
  %19 = load i32, i32* @free, align 4
  %20 = call i32 (i32, ...) @y(i32 %19)
  ret void
}

declare dso_local i32 @ipc_marshal_workspace_event(i8*, i32*, i32*) #1

declare dso_local i32 @y(i32, ...) #1

declare dso_local i32 @ipc_send_event(i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
